--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="main-content">
         <section id="hero-section" class="hero-section">
             <h1>Olá, eu sou Marcelo! 👋</h1>
-            <p>Seja bem vindo</p> 
+            <p>Seja bem vindo</p>
             <img src="placeholder-profile.jpg" alt="Sua Foto de Perfil" class="profile-picture">
             <a href="#portfolio" class="btn primary-btn">Explore Meu Trabalho</a>
         </section>
@@ -43,8 +43,8 @@
             <p>Uninter - 2025 - 2027</p>
             <ul>
                 <li>Principais disciplinas: Python, Lógica de Programação, Estrutura de Dados, Bancos de Dados, Ferramentas e técnicas de Análise de Dados (limpeza, visualização, modelagem).</li>
-                <li>Projetos relevantes: [Ex: Sistema de Gestão de Biblioteca, Aplicação To-Do List]</li>
-            </ul>
+                <li>Projetos relevantes: Api de dados veículares</li> 
+                </ul>
 
             <h3>Idiomas</h3>
             <ul>
