--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>Uninter - 2025 - 2027</p>
             <ul>
                 <li>Principais disciplinas: Python, Lógica de Programação, Estrutura de Dados, Bancos de Dados, Ferramentas e técnicas de Análise de Dados (limpeza, visualização, modelagem).</li>
-                <li>Projetos relevantes: API DE DADOS VEÍCULARE</li>
+                <li>Projetos relevantes: API DE DADOS VEÍCULARES</li>
             </ul>
 
             <h3>Idiomas</h3>
